radarr MovieFileStatus-missing colorimpared fix for #305

--- a/css/base/radarr/radarr-base.css
+++ b/css/base/radarr/radarr-base.css
@@ -343,6 +343,10 @@ a:hover {
     color: var(--text) !important;
 }
 
+[class*="MovieFileStatus-missing"].colorImpaired {
+    background: transparent;
+}
+
 .fa-search:hover {
     color: var(--text-hover) !important;
 }
